--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.repository_owner }}/myblog:latest
+          tags: ghcr.io/${{ github.repository_owner }}/myblog:latest
